apps/hello-world/hello-world/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.nginx.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://oauth2.sarapuce.fr:30080/oauth2/start?rd=https://$best_http_host$request_uri"
spec:
  ingressClassName: public
  rules:
  - host: hello.sarapuce.fr
    http:
      paths:
      - backend:
          service:
            name: hello-world-helloworld
            port:
              number: 5678
        path: /
        pathType: Prefix
